test/Fail/Issue1346.err
Issue1346.agda:19.10-11: error: [UnequalTerms]
A + (B * C) !=< A + B * C
when checking that the expression x has type A + B * C
